[package]
name = "mitnick"
version = "0.1.0"
authors = ["mental32 <m3nta1@yahoo.com>"]
edition = "2018"

[dependencies]
# actix = "0.9.0"
# actix-rt = "1.1.1"

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

tokio = { version = "0.2.21", features = [ "full" ] }
paw = "1.0"
structopt = { version = "0.3", features = [ "paw" ] }
crossbeam-channel = "0.4.2"
bincode = "1.2.1"
# redis = "0.16.0"
# actix-web = "2.0.0"

tmq = "0.2.1"
futures = "0.3.5"
rand = "0.7.3"

[patch.crates-io]
zmq = { git = "https://github.com/erickt/rust-zmq", rev = "2b9bb43" }
